Closed Bug 606040 Opened 14 years ago Closed 14 years ago

[SeaMonkey] 'Linux comm-central-trunk leak test build' still broken after bug 536295 bustage fixes

Categories

(Core :: Networking: Cache, defect)

x86
Linux
defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla2.0b7

People

(Reporter: sgautherie, Assigned: Callek)

References

Details

Attachments

(1 file)

This platform reports a different error than the one reported in bug 536295 comment 50.

http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1287596231.1287596970.19811.gz
Linux comm-central-trunk leak test build on 2010/10/20 10:37:11
{
/builds/slave/comm-central-trunk-linux-debug/build/mozilla/uriloader/prefetch/OfflineCacheUpdateGlue.cpp: In member function ‘virtual nsresult mozilla::docshell::OfflineCacheUpdateGlue::ApplicationCacheAvailable(nsIApplicationCache*)’:
/builds/slave/comm-central-trunk-linux-debug/build/mozilla/uriloader/prefetch/OfflineCacheUpdateGlue.cpp:221:164: error: cannot pass objects of non-trivially-copyable type ‘class nsCOMPtr<nsIDOMDocument>’ through ‘...’
NEXT ERROR make[6]: *** [OfflineCacheUpdateGlue.o] Error 1
}

I would guess this is related to gcc 4.5, compared to gcc 4.3.3...

NB: (Firefox and) Thunderbird doesn't have this error.
Component: Release Engineering → Networking: Cache
Product: SeaMonkey → Core
QA Contact: release → networking.cache
Attached patch Fix [I think]Splinter Review
Assignee: nobody → bugspam.Callek
Status: NEW → ASSIGNED
Attachment #484942 - Flags: review?(cbiesinger)
Attachment #484942 - Flags: review?(cbiesinger) → review+
This error is gone from SeaMonkey machines.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
V.Fixed, per previous comment.
Status: RESOLVED → VERIFIED
Flags: in-testsuite-
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: