Bug 606040 - [SeaMonkey] 'Linux comm-central-trunk leak test build' still broken after bug 536295 bustage fixes. r=biesi, a=bustage-fix